learning/voting-app/old/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048-game"
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: 2048-game
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "svc-2048-game"
              servicePort: 8001
